# relay

./: Cargo.toml  README.md
.github/workflows/: build-release-binaries.yml
src/: main.rs
templates/: app.js  listing.html  speedtest.html  sytle.css
