[package]
name = "file-share"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core HTTP server.
# Feature multipart enables handling with form data.
axum = "0.8"

# Convinient raw data reader and writer, for handling with files.
bytes = "1.11"

# Core concurrency support crate.
# Feature fs and io-util enables filesystem support.
# the last two features enable asynchronization in main function.
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

tower-http = { version = "0.6", features = ["fs"] }
tower = "0.5"
