[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async stream helper for generating streaming responses.
async-stream = "0.3"

# Core HTTP server.
# Feature multipart enables handling with form data.
axum = "0.8"

# Convinient raw data reader and writer, for handling with files.
bytes = "1.11"

# Fast random generator for speed test payloads.
fastrand = "2"

# Stream traits for async streaming responses.
futures-util = "0.3"

# Core concurrency support crate.
# Feature fs and io-util enables filesystem support.
# the last two features enable asynchronization in main function.
tokio = { version = "1.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }

# Tower trait extensions for service helpers.
tower = "0.5"

# HTTP utilities for serving files.
tower-http = { version = "0.6", features = ["fs"] }
